--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    namespace 'com.zim.tagg'
+    namespace 'com.zim.tags'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.zim.tagg"
+        applicationId "com.zim.tags"
         minSdk 24
         targetSdk 34
-        versionCode 1
+        versionCode 13
         versionName "1.0"
     }
 
@@ -19,15 +19,23 @@ android {
         debug { debuggable true }
         release { minifyEnabled false }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
-    implementation "androidx.appcompat:appcompat:1.7.0"
-    implementation "androidx.recyclerview:recyclerview:1.3.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.3"
-    implementation "androidx.preference:preference-ktx:1.2.1"
-    implementation "org.jsoup:jsoup:1.17.2"
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'com.google.android.material:material:1.9.0'
 }
